// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Blue 1`] = `
HTMLCollection [
  <div
    class="bg-blue  p-2 block w-full"
  />,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Expanded Blue 1`] = `
HTMLCollection [
  <div
    class="bg-blue  px-2 py-2 block w-full relative overflow-visible sticky-header"
  >
    <div
      class="inline-block w-1/2 text-xs"
    >
      <span
        class="relative bottom-1"
      />
    </div>
    <div
      class="inline-block w-1/2 text-right"
    >
      <button
        class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
      >
        <span
          class="relative bottom-2"
        >
          ...
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Expanded Green 1`] = `
HTMLCollection [
  <div
    class="bg-green  px-2 py-2 block w-full relative overflow-visible sticky-header"
  >
    <div
      class="inline-block w-1/2 text-xs"
    >
      <span
        class="relative bottom-1"
      />
    </div>
    <div
      class="inline-block w-1/2 text-right"
    >
      <button
        class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
      >
        <span
          class="relative bottom-2"
        >
          ...
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Expanded Lime 1`] = `
HTMLCollection [
  <div
    class="bg-lime  px-2 py-2 block w-full relative overflow-visible sticky-header"
  >
    <div
      class="inline-block w-1/2 text-xs"
    >
      <span
        class="relative bottom-1"
      />
    </div>
    <div
      class="inline-block w-1/2 text-right"
    >
      <button
        class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
      >
        <span
          class="relative bottom-2"
        >
          ...
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Expanded Yellow 1`] = `
HTMLCollection [
  <div
    class="bg-yellow  px-2 py-2 block w-full relative overflow-visible sticky-header"
  >
    <div
      class="inline-block w-1/2 text-xs"
    >
      <span
        class="relative bottom-1"
      />
    </div>
    <div
      class="inline-block w-1/2 text-right"
    >
      <button
        class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
      >
        <span
          class="relative bottom-2"
        >
          ...
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Green 1`] = `
HTMLCollection [
  <div
    class="bg-green  p-2 block w-full"
  />,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Index 1`] = `
HTMLCollection [
  <div
    class="bg-blue  px-2 py-2 block w-full relative overflow-visible sticky-header"
  >
    <div
      class="inline-block w-1/2 text-xs"
    >
      <span
        class="relative bottom-1"
      />
    </div>
    <div
      class="inline-block w-1/2 text-right"
    >
      <button
        class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
      >
        <span
          class="relative bottom-2"
        >
          ...
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Lime 1`] = `
HTMLCollection [
  <div
    class="bg-lime  p-2 block w-full"
  />,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader With Open Controls 1`] = `
HTMLCollection [
  <div
    class="bg-yellow  px-2 py-2 block w-full relative overflow-visible sticky-header"
  >
    <div
      class="inline-block w-1/2 text-xs"
    >
      <span
        class="relative bottom-1"
      />
    </div>
    <div
      class="inline-block w-1/2 text-right"
    >
      <button
        class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
      >
        <span
          class="relative bottom-2"
        >
          ...
        </span>
      </button>
      <div
        class="border-yellow absolute bg-gray-300 w-64 h-32 inline-block right-0 top-0 sticky-header-control border-2"
        style="top: 48px;"
      >
        <div
          class="block w-full py-2"
        >
          <div
            class="inline-block w-1/4 p-2"
          >
            <button
              class="bg-blue p-2 w-8 h-8 border-transparent hover:border-gray-200 border-2"
            >
               
            </button>
          </div>
          <div
            class="inline-block w-1/4 p-2"
          >
            <button
              class="bg-yellow p-2 w-8 h-8 border-transparent hover:border-gray-200 border-2"
            >
               
            </button>
          </div>
          <div
            class="inline-block w-1/4 p-2"
          >
            <button
              class="bg-lime p-2 w-8 h-8 border-transparent hover:border-gray-200 border-2"
            >
               
            </button>
          </div>
          <div
            class="inline-block w-1/4 p-2"
          >
            <button
              class="bg-green p-2 w-8 h-8 border-transparent hover:border-gray-200 border-2"
            >
               
            </button>
          </div>
        </div>
        <div
          class="text-white py-2"
        >
          <div
            class="block text-center text-xs"
          >
            z-position
          </div>
          <div
            class="block w-full"
          >
            <div
              class="inline-block w-1/3 text-right"
            >
              <button>
                ⬅️
              </button>
            </div>
            <div
              class="inline-block w-1/3 text-center text-lg"
            >
              1
            </div>
            <div
              class="inline-block w-1/3 text-left"
            >
              <button>
                ➡️
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote/components/StickyHeader Yellow 1`] = `
HTMLCollection [
  <div
    class="bg-yellow  p-2 block w-full"
  />,
]
`;
